No se puede eliminar rol primaro. Arreglados los errores de Ortografia y mensaje de Webservice. Se implemento busqueda por CI en consultas de usuarios (falta conexion con el WS). Se agrego filtro previo para la gestion de usuarios (rol u CI).

--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -252,3 +252,8 @@ tbody tr td {
   border-radius: 10px;
   margin: 20px;
 }
+
+.full-width-form .form-horizontal {
+    width: 100%;
+    margin: 2% auto;
+}
