--- a/views/users/manage.html
+++ b/views/users/manage.html
@@ -10,6 +10,7 @@
    <thead>
      <tr>
        <th>USBID</th>
+       <th>Cédula</th>
        <th>Nombre</th>
        <th>Rol</th>
        <th>Email</th>
@@ -20,6 +21,7 @@
      {{for usuario in usuarios:}}
        <tr>
          <td>{{=usuario['username']}}</td>
+         <td>{{=usuario['ci']}}</td>
          <td>{{=usuario['name']}}</td>
          <td>{{=usuario['roles']}}</td>
          <td>{{=usuario['email']}}</td>
@@ -38,7 +40,7 @@
           responsive: true,
             "language": {
                 search:         "Buscar: ",
-                searchPlaceholder: "USBID, Nombre...",
+                searchPlaceholder: "Cédula, USBID, Nombre...",
                 lengthMenu:     "Mostrar _MENU_ entradas.",
                 info:           "Mostrando _START_ a _END_ de _TOTAL_ entradas.",
                 infoEmpty:      "",
@@ -60,6 +62,7 @@
                 }
             },
              "columns": [
+                null,
                 null,
                 null,
                 null,
