Vista para el supervisor para visualizar transcripciones en curso.

--- a/views/transcriptions/edit.html
+++ b/views/transcriptions/edit.html
@@ -217,7 +217,7 @@
       </div>
 
       <div class="field-tag-wide">
-        <b>Observacioness</b>
+        <b>Observaciones</b>
         {{=form.custom.widget.observaciones}}
       </div>
 
