--- a/views/transcriptions/transcriptors.html
+++ b/views/transcriptions/transcriptors.html
@@ -52,7 +52,9 @@
         </div>
         <div class="modal-body">
             <center> <p>¿Está seguro que quiere eliminar el rol de TRANSCRIPTOR para este usuario?</p>
-                     <p>Las transcripciones incompletas de usuario se elminarán.</p>
+                     <p>Las transcripciones incompletas de este usuario pasaran al DEPARTAMENTO, COORDINACION o DECANATO.
+                        Para continuarlas, deben ser asignadas a otro Transcriptor.
+                     </p>
             </center>
             <br>
             <center>
