Flujo basase para el envio, aprobacion y rechazo de Transcripciones.

--- a/views/queries/studentdetail.html
+++ b/views/queries/studentdetail.html
@@ -17,6 +17,7 @@
     <p><b>Nombres:</b> {{=student_data['nombres']}}.</p>
     <p><b>Apellidos:</b> {{=student_data['apellidos']}}.</p>
     <p><b>CI:</b> {{=student_data['ci']}}.</p>
+    <p><b>Carnet:</b> {{=student_data['carnet']}}.</p>
     <p><b>Sexo:</b> {{=student_data['sexo']}}.</p>
 
     <h2>Asignaturas Aprobadas</h2>
