--- a/views/transcriptions/transcriptor_view.html
+++ b/views/transcriptions/transcriptor_view.html
@@ -264,7 +264,7 @@
 <div class="row">
   <div class="transcription-buttons">
     {{=form.custom.end}}
-    <a href="{{=URL(c='transcriptions', f='following')}}">
+    <a href="{{=URL(c='transcriptions', f='list_sent')}}">
       <button class="btn btn-primary">
         <i class="fa fa-arrow-left" aria-hidden="true"></i> Regresar
       </button>
