--- a/views/transcriptions/list.html
+++ b/views/transcriptions/list.html
@@ -35,7 +35,15 @@
               <i class="fa fa-times red" aria-hidden="true"></i>
            </a>
          </td>
-         <td><a href="#"><i class="fa fa-arrow-right green" aria-hidden="true"></i></td>
+         <td>
+           <a data-toggle="modal"
+              data-target="#modalEnviar"
+              data-id="{{=trans['id']}}"
+              data-cod="{{=trans['codigo']}}"
+              data-link-enviar = "{{=URL(c='transcriptions',f='send_transcription',args=[trans['id']])}}">
+             <i class="fa fa-arrow-right green" aria-hidden="true"></i>
+           </a>
+         </td>
        </tr>
       {{pass}}
    </tbody>
@@ -71,8 +79,40 @@
     </div>
 </div>
 
+<!-- Modal Enviar-->
+<div class="container">
+  <div class="modal fade" id="modalEnviar" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <center> <h4 class="modal-title">Enviar Transcripción</h4> </center>
+        </div>
+        <div class="modal-body">
+            <center> <p>¿Está seguro que quiere enviar a revisión la transcripción con los siguientes detalles?</p>
+                     <b>ID: </b> <span id="transid-env"></span>
+                     <br>
+                     <b>Código: </b><span id="transcod-env"></span>
+
+                     <p>Recuerde que una vez enviada no podrá editarla nuevamente.</p>
+            </center>
+            <br>
+            <center>
+                <button type="button" class="btn btn-danger" data-dismiss="modal"> Cancelar </button>
+                <a id="botonenviar" style="text-decoration: none;">
+                  <button type="button" class="btn btn-primary">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i> Enviar
+                  </button>
+                </a>
+            </center>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+
 <script type="text/javascript">
-  // Pasamos los argumentos para eliminar el rol del usuario.
+  // Pasamos los argumentos para eliminar la transcripcion.
   $('#modalEliminar').on('show.bs.modal', function(e){
 
       var linkEliminar = $(e.relatedTarget).data('link-eliminar');
@@ -83,6 +123,19 @@
 
       $("#transid").text(id);
       $("#transcod").text(cod);
+  });
+
+  // Pasamos los argumentos para enviar la transcripcion.
+  $('#modalEnviar').on('show.bs.modal', function(e){
+
+      var linkEnviar = $(e.relatedTarget).data('link-enviar');
+      $("#botonenviar").attr("href", linkEnviar);
+
+      var id  = $(e.relatedTarget).data('id');
+      var cod = $(e.relatedTarget).data('cod');
+
+      $("#transid-env").text(id);
+      $("#transcod-env").text(cod);
   });
 
   // initializing datatable
