--- a/static/css/sigpae.css
+++ b/static/css/sigpae.css
@@ -246,9 +246,19 @@ tbody tr td {
 .block-info {
   border: 1px solid #3498db;
   background-color: white;
-  padding: 20px;
+  padding: 10px;
   font-style: italic;
   border-left: 5px solid #3498db;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.block-danger {
+  border: 1px solid #d9534f;
+  background-color: white;
+  padding: 10px;
+  font-style: italic;
+  border-left: 5px solid #d9534f;
   border-radius: 10px;
   margin: 20px;
 }
