--- a/views/transcriptions/approval_view.html
+++ b/views/transcriptions/approval_view.html
@@ -258,9 +258,41 @@
   </div>
 </div>
 
+<!-- Modal Aprobar-->
+<div class="container">
+  <div class="modal fade" id="modalAprobar" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <center> <h4 class="modal-title">Aprobar Transcripción</h4> </center>
+        </div>
+        <div class="modal-body">
+          <center> <p>¿Está seguro que quiere aprobar esta Transcrición?</p>
+            <p>Recuerde que una vez aprobada no podrá editarse nuevamente y se agregará a la lista de
+              Programas Analíticos de Estudio disponibles.</p>
+            </center>
+            <br>
+            <center>
+              <a id="botonaprobar" style="text-decoration: none;">
+                <button type="submit" class="btn btn-success">
+                  <i class="fa fa-check" aria-hidden="true"></i> Aprobar
+                </button>
+              </a>
+              <button type="button" class="btn btn-primary" data-dismiss="modal"> Cerrar </button>
+            </center>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- el modal de aprobacion se incluye dentro del formulario, para que al enviarse pueda procesarsess
+       el formulario mediante web2py de manera automatica -->
+  {{=form.custom.end}}
+
 <div class="row">
   <div class="transcription-buttons">
-    {{=form.custom.end}}
     <a href="{{=URL(c='transcriptions', f='list_pending')}}">
       <button class="btn btn-primary">
         <i class="fa fa-arrow-left" aria-hidden="true"></i> Regresar
@@ -314,34 +346,8 @@
     </div>
 </div>
 
-<!-- Modal Aprobar-->
-<div class="container">
-  <div class="modal fade" id="modalAprobar" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <center> <h4 class="modal-title">Aprobar Transcripción</h4> </center>
-        </div>
-        <div class="modal-body">
-            <center> <p>¿Está seguro que quiere aprobar esta Transcrición?</p>
-                     <p>Recuerde que una vez aprobada no podrá editarse nuevamente y se agregará a la lista de
-                        Programas Analíticos de Estudio disponibles.</p>
-            </center>
-            <br>
-            <center>
-                <a id="botonaprobar" style="text-decoration: none;">
-                  <button type="button" class="btn btn-success">
-                    <i class="fa fa-check" aria-hidden="true"></i> Aprobar
-                  </button>
-                </a>
-                <button type="button" class="btn btn-primary" data-dismiss="modal"> Cerrar </button>
-            </center>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
+
+
 
 <script type="text/javascript" charset="utf8" src="{{=URL('static','datepicker/js/bootstrap-datepicker.min.js')}}"></script>
 <script type="text/javascript" charset="utf8" src="{{=URL('static','datepicker/js/bootstrap-datepicker.es.min.js')}}"></script>
