Ahora se extrae el nombre de la asignatura desde el WS.

--- a/views/transcriptions/edit.html
+++ b/views/transcriptions/edit.html
@@ -26,7 +26,7 @@
       {{=transcription_form.custom.begin}}
 
       <div class="field-tag">
-        <b>Código </b>
+        <b>Código * </b>
         {{=transcription_form.custom.widget.codigo}}
       </div>
         {{if transcription_form.errors:}}
@@ -38,7 +38,7 @@
         {{pass}}
 
       <div class="field-tag">
-        <b>Denominación</b>
+        <b>Denominación *</b>
         {{=transcription_form.custom.widget.denominacion}}
       </div>
       {{if transcription_form.errors:}}
@@ -50,7 +50,7 @@
       {{pass}}
 
       <div class="field-tag">
-        <b>Fecha de Elaboración </b>
+        <b>Fecha de Elaboración *</b>
         {{=transcription_form.custom.widget.fecha_elaboracion}}
       </div>
       {{if transcription_form.errors:}}
@@ -68,10 +68,10 @@
       <div class="row">
         <div class="col-md-6">
           <div class="transcription-tag">
-            <b>Desde</b>
+            <b>Desde *</b>
           </div>
           <div class="field-tag">
-            <b>Periodo</b>
+            <b>Periodo *</b>
             {{=transcription_form.custom.widget.periodo}}
           </div>
           {{if transcription_form.errors:}}
@@ -83,7 +83,7 @@
           {{pass}}
 
           <div class="field-tag">
-            <b>Año </b>
+            <b>Año *</b>
             {{=transcription_form.custom.widget.anio}}
           </div>
           {{if transcription_form.errors:}}
@@ -126,7 +126,7 @@
       </div>
 
       <div class="field-tag">
-        <b>Horas de Teoría</b>
+        <b>Horas de Teoría *</b>
         {{=transcription_form.custom.widget.horas_teoria}}
       </div>
       {{if transcription_form.errors:}}
@@ -138,7 +138,7 @@
       {{pass}}
 
       <div class="field-tag">
-        <b>Horas de Práctica</b>
+        <b>Horas de Práctica *</b>
         {{=transcription_form.custom.widget.horas_practica}}
       </div>
       {{if transcription_form.errors:}}
@@ -150,7 +150,7 @@
       {{pass}}
 
       <div class="field-tag">
-        <b>Horas de Laboratorio</b>
+        <b>Horas de Laboratorio *</b>
         {{=transcription_form.custom.widget.horas_laboratorio}}
       </div>
       {{if transcription_form.errors:}}
@@ -162,7 +162,7 @@
       {{pass}}
 
       <div class="field-tag">
-        <b>Créditos</b>
+        <b>Créditos *</b>
         {{=transcription_form.custom.widget.creditos}}
       </div>
       {{if transcription_form.errors:}}
